- Fixed: Cannot index empty table - Added: Tab and Shift-Tab can rotate now

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,13 @@ If your plugin does not need CSS, delete this file.
 	width: fit-content;
 	height: fit-content;
 	padding: 0 2px;
+	margin: 0;
+	filter: brightness(0.5);
+	transition: all 100ms ease-in-out;
+}
+
+.ob-table-enhancer-row-bar-button:hover, .ob-table-enhancer-col-bar-button:hover {
+	filter: brightness(1);
 }
 
 .ob-table-enhancer-col-bar-button {
@@ -31,4 +38,11 @@ If your plugin does not need CSS, delete this file.
 	height: fit-content;
 	padding: 5px 2px 0 0;
 	margin: 0;
+	filter: brightness(0.5);
+	transition: all 100ms ease-in-out;
+}
+
+.is-editing {
+	filter: brightness(1.5);
+	background-color: var(--bg1);
 }
